Incorporated ElevatorSettings across the board and made right click menu functional for alternating them.
TODO: Allow config to disable individual edits of certain settings.
TODO: Start on /ele admin
TODO: Fix non boolean elevator setting edits and views.
TODO: Fix picking up elevator with changes made.
TODO: Add Elevator Effects.
TODO: Permission to place elevator.